feat(s3stream/wal): check and use direct IO by default (#683)
Signed-off-by: Ning Yu <ningyu@automq.com>